<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="#99FFFFFF"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/date_example"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#99FFFFFF"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/time_example"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/data"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <TextView
        android:id="@+id/averageVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#99FFFFFF"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/average_velocity_example"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/time"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#99FFFFFF"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/distance_example"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/averageVelocity"
        app:layout_constraintTop_toBottomOf="@+id/averageVelocity" />


</androidx.constraintlayout.widget.ConstraintLayout>